Prevent code wrapping adjustment

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -67,7 +67,9 @@
 	}
 
 	pre code {
-		white-space: inherit; //prevent code from wrapping
+		white-space: pre;
+		word-break: normal;
+		word-wrap: normal;
 	}
 
 
